Added name to README

--- a/README
+++ b/README
@@ -9,3 +9,5 @@ This is a low priority side project for me. It'll see updates when I need them, 
 I've used Eclipse+ADT for this project. Project requires you set up the Google Play Service library as well (not included)
 
 LICENSE is Apache License, Version 2.0
+
+- Jorrit "Chainfire" Jongma
